# insurance-rdd

./: README.md  pyproject.toml  run_tests_databricks.py
notebooks/: insurance_rdd_demo.py
src/insurance_rdd/: __init__.py  _rdrobust.py  core.py  geographic.py  multicutoff.py  outcomes.py  plots.py  presets.py  report.py  validity.py
tests/: conftest.py  test_core.py  test_geographic.py  test_multicutoff.py  test_outcomes.py  test_plots.py  test_presets.py  test_rdrobust_import.py  test_report.py  test_validity.py
