[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-rdd"
version = "0.1.0"
description = "Regression Discontinuity Design for insurance pricing rating thresholds"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "rdrobust>=1.3.0",
    "rddensity>=2.4.0",
    "rdlocrand>=1.0.5",
    "rdmulti>=0.6.0",
]

[project.optional-dependencies]
geo = ["geopandas>=0.14", "shapely>=2.0"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-rdd"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_rdd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
